--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body {
-	background-color: colombia blue;
+	background-color: blue;
 }
 
 h1 {
 	color:english violet;
-	background-color: pale yellow;
-	border: 2px solid mindaro;
+	background-color: yellow;
+	border: 2px green;
 }
 
 img {
