--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
-	background-color: blue;
+	background-color: #c4d8e2;
 }
 
 h1 {
-	color:english violet;
-	background-color: yellow;
-	border: 2px green;
+	color:#563c5c;
+	background-color: #FFFFED;
+	border: 2px #e3f988;
 }
 
 img {
 	width: 100%;
-	height: 125%;
+	height: 100%;
 }
 
 .top {
